@@ -2,6 +2,7 @@ package Labs07.Bai3;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class Bai3_2_1 {
     public static void main(String[] args) {
@@ -11,7 +12,7 @@ public class Bai3_2_1 {
         list.add(new Product(3, "samsung", 121f));
         list.add(new Product(4, "nokia", 120f));
 
-        List<Float> floatList = list.stream().filter(p -> p.price < 130).map(Product::getPrice).toList();
+        List<Float> floatList = list.stream().filter(p -> p.price < 130).map(Product::getPrice).collect(Collectors.toList());
         System.out.println(floatList);
     }
 }
